src/api/metahotspot.h


typedef struct mhs_model_t mhs_model_t;
typedef struct mhs_compiled_t mhs_compiled_t;
typedef struct mhs_solution_t mhs_solution_t;
typedef struct mhs_assembly_t mhs_assembly_t;
typedef uint32_t mhs_layer_id_t;
typedef uint32_t mhs_block_id_t;
typedef uint32_t mhs_material_id_t;
typedef uint32_t mhs_function_id_t;
typedef uint32_t mhs_probe_id_t;
typedef int32_t mhs_study_t;
typedef int32_t mhs_length_unit_t;
typedef int32_t mhs_axis_t;
typedef int32_t mhs_geometry_op_t;
typedef int32_t mhs_fluid_bc_t;
typedef int32_t mhs_operator_t;
typedef int32_t mhs_status_t;
typedef struct {
    double a_min, a_max, b_min, b_max;
} mhs_rect2d_t;
typedef struct {
    double x, y;
} mhs_point2d_t;
typedef struct {
    mhs_axis_t axis;
    double coordinate;
    mhs_rect2d_t rectangle;
} mhs_face_region_t;
typedef struct {
    mhs_solver_type_t solver_type;
    double linear_tolerance;
    int32_t linear_max_iterations;
    double underrelaxation;
    int32_t nonlinear_max_iterations;
    double nonlinear_relative_tolerance;
    double nonlinear_absolute_tolerance;
} mhs_solver_opts_t;
typedef struct {
    int32_t rows, columns, nnz;
    const int32_t* outer_indices;
    const int32_t* inner_indices;
    const double* values;
} mhs_csc_view_t;
typedef struct {
    int32_t accepted; 
    double error_ratio;
    double suggested_dt_factor;
    int32_t nonlinear_iterations;
} mhs_step_info_t;
typedef struct {
    size_t cell_count;
    size_t state_count;
    size_t node_count;
    size_t grid_count; 
    mhs_study_t study_type;
    double initial_temperature;
    const uint32_t* layer_ids; 
    const uint32_t* block_ids; 
    const size_t* grid_to_cell; 
    size_t nx, ny, nz;
    const double* x_verts; 
    const double* y_verts; 
    const double* z_verts; 
} mhs_compiled_metadata_t;
typedef struct {
    size_t cell_count;
    size_t state_count;
    size_t node_count;
    double time;
    const double* cell_temperatures; 
    const double* states; 
    const double* node_temperatures; 
} mhs_solution_view_t;
typedef struct {
    size_t count;
    const char* const* names; 
    const size_t* record_counts; 
} mhs_probe_metadata_t;
MHS_API void mhs_solver_opts_default(mhs_solver_opts_t* opts);
MHS_API const char* mhs_status_string(mhs_status_t status);
MHS_API const char* mhs_last_error(void);
MHS_API mhs_status_t mhs_model_create(mhs_model_t** out);
MHS_API mhs_status_t mhs_model_destroy(mhs_model_t* m);
MHS_API mhs_status_t mhs_model_read_xml(mhs_model_t* m, const char* path);
MHS_API mhs_status_t mhs_model_set_settings(mhs_model_t* m, mhs_study_t study, mhs_length_unit_t length_unit,
    double initial_temperature_K, double duration, double output_interval);
MHS_API mhs_status_t mhs_model_set_mesh(
    mhs_model_t* m, size_t nx, const double* x, size_t ny, const double* y, size_t nz, const double* z);
MHS_API mhs_status_t mhs_model_add_variable(mhs_model_t* m, const char* name, const char* expression);
MHS_API mhs_material_id_t mhs_model_add_material(mhs_model_t* m, const char* name, const char* kx, const char* ky,
    const char* kz, const char* rho, const char* c, const char* dynamic_viscosity);
MHS_API mhs_layer_id_t mhs_model_add_layer(
    mhs_model_t* m, const char* thickness, const char* x_offset, const char* y_offset);
MHS_API mhs_block_id_t mhs_model_add_block(mhs_model_t* m, mhs_layer_id_t layer, const char* material_name,
    const char* heat_source, const char* x_offset, const char* y_offset, const char* thickness);
MHS_API mhs_status_t mhs_model_add_rect(mhs_model_t* m, mhs_block_id_t block, mhs_geometry_op_t op, const char* x,
    const char* y, const char* width, const char* height);
MHS_API mhs_status_t mhs_model_add_dirichlet(
    mhs_model_t* m, const mhs_face_region_t* regions, size_t n_regions, const char* temperature);
MHS_API mhs_status_t mhs_model_add_neumann(
    mhs_model_t* m, const mhs_face_region_t* regions, size_t n_regions, const char* heat_flux);
MHS_API mhs_status_t mhs_model_add_convection(mhs_model_t* m, const mhs_face_region_t* regions, size_t n_regions,
    const char* coefficient, const char* ambient_temperature);
MHS_API mhs_status_t mhs_model_set_default_dirichlet(mhs_model_t* m, const char* temperature);
MHS_API mhs_status_t mhs_model_set_default_neumann(mhs_model_t* m, const char* heat_flux);
MHS_API mhs_status_t mhs_model_set_default_convection(
    mhs_model_t* m, const char* coefficient, const char* ambient_temperature);
MHS_API mhs_function_id_t mhs_model_add_function_expr(mhs_model_t* m, const char* name, const char* expression);
MHS_API mhs_function_id_t mhs_model_add_function_gauss(
    mhs_model_t* m, const char* name, double amplitude, double tau, double center);
MHS_API mhs_function_id_t mhs_model_add_function_sine(
    mhs_model_t* m, const char* name, double amplitude, double angular_frequency, double phase);
MHS_API mhs_function_id_t mhs_model_add_function_double_exponential(
    mhs_model_t* m, const char* name, double amplitude, double alpha, double beta);
MHS_API mhs_function_id_t mhs_model_add_function_piecewise(
    mhs_model_t* m, const char* name, const mhs_point2d_t* points, size_t count);
MHS_API mhs_function_id_t mhs_model_add_function_periodic_piecewise_constant(
    mhs_model_t* m, const char* name, const double* values, size_t count, double period);
MHS_API mhs_probe_id_t mhs_model_add_probe(mhs_model_t* m, const char* name, double x, double y, double z);
MHS_API mhs_status_t mhs_model_add_fluid_boundary(mhs_model_t* m, mhs_axis_t axis, double coordinate,
    mhs_rect2d_t region, mhs_fluid_bc_t kind, double value, double inlet_temperature);
MHS_API mhs_status_t mhs_model_compile(const mhs_model_t* m, mhs_compiled_t** out);
MHS_API mhs_status_t mhs_compiled_destroy(mhs_compiled_t* c);
MHS_API mhs_status_t mhs_compiled_metadata(const mhs_compiled_t* c, mhs_compiled_metadata_t* out);
MHS_API mhs_status_t mhs_compiled_assemble(
    const mhs_compiled_t* c, const double* state, double time, mhs_assembly_t** out);
MHS_API mhs_status_t mhs_assembly_destroy(mhs_assembly_t* a);
MHS_API size_t mhs_assembly_n(const mhs_assembly_t* a);
MHS_API mhs_status_t mhs_assembly_matrix(const mhs_assembly_t* a, mhs_operator_t which, mhs_csc_view_t* out);
MHS_API const double* mhs_assembly_rhs(const mhs_assembly_t* a);
MHS_API mhs_status_t mhs_compiled_set_initial_state(mhs_compiled_t* c, const double* state, size_t count);
MHS_API mhs_status_t mhs_compiled_solve(const mhs_compiled_t* c, const mhs_solver_opts_t* opts, mhs_solution_t** out);
MHS_API mhs_status_t mhs_solution_destroy(mhs_solution_t* s);
MHS_API mhs_status_t mhs_compiled_step(const mhs_compiled_t* c, const double* state, double time, double dt,
    double* out_state, mhs_step_info_t* info, const mhs_solver_opts_t* opts);
MHS_API mhs_status_t mhs_compiled_write_vtu(const mhs_compiled_t* c, const mhs_solution_t* s, const char* path);
MHS_API mhs_status_t mhs_solution_view(const mhs_solution_t* s, mhs_solution_view_t* out);
MHS_API size_t mhs_solution_probe_count(const mhs_solution_t* s);
MHS_API const char* mhs_solution_probe_name(const mhs_solution_t* s, size_t index);
MHS_API size_t mhs_solution_probe_record_count(const mhs_solution_t* s, size_t probe_index);
MHS_API const double* mhs_solution_probe_times(const mhs_solution_t* s, size_t probe_index);
MHS_API const double* mhs_solution_probe_values(const mhs_solution_t* s, size_t probe_index);
MHS_API mhs_status_t mhs_solution_probe_metadata(const mhs_solution_t* s, mhs_probe_metadata_t* out);
MHS_API mhs_status_t mhs_solution_probe_metadata_free(mhs_probe_metadata_t* meta);
MHS_API const char* mhs_model_material_name(const mhs_model_t* m, size_t index);
MHS_API size_t mhs_model_material_count(const mhs_model_t* m);